# xenofarm

./: .gitattributes  .gitignore  Makefile  README  client.sh  dbconvert.sql  gc.pike  gc_latest_by_system.pike  io.pmod  result_parser.pike  server.pike  tables.sql  updatehtml
client/: .cvsignore  .gitignore  Makefile  Makefile.in  README  client.sh  configure  configure.in  pike_client.pike  projects.conf  put.c  retouch.c  start
client/config/: .cvsignore  .gitignore  pike.cfg
icons/: mkplupp.pike  pcl-WARN.xcf  pcl-green.xcf  pcl-red.xcf  pcl-white.xcf  pcl-yellow.xcf  plupp.psd
pages/: mkhtml.pike  overview.html
pages/examples/: details.html  pikefarm.html  specific_build.html
pages/web/: .cvsignore  .gitignore  about.xml  changes.xml  contact.xml  diff.xml  download.xml  download.xml.in  index.xml  installs.xml  template  view.xml
projects/argouml/: README  argouml-server.sh  argouml.cfg  crontab.lenin  crontab.sherman  crontab.stanly  gen-diffs.sh  gen-result.sh  start-client.sh  start-gen.sh  start-result.sh  start-server.sh
projects/lsh/: README  lsh-result_parser.pike  lsh-server.pike  lsh.cfg  source-transform.sh  updatehtml_cfg.py
projects/lyskom-server/: README  latest.sh  lyskom-server.cfg  res2html.sh  result_parser.pike  server.pike  source-transform.sh  updatehtml.py  updatehtml_cfg.py  updatehtml_templates.py
projects/nettle/: README  nettle-server.pike  nettle.cfg  (+1 more)
python_modules/: updatehtml.py  updatehtml_templates.py
roxen_modules/: INFO  xenofarm_fs.pike  xenofarm_ui.pike
svc/: xenofarm-server.sh  xenofarm-server.xml
(+48 files in other folders)
