dnl Process this file with autoconf to produce a configure script.
AC_INIT(client.sh)

dnl Checks for programs.
AC_PROG_AWK
AC_PROG_CC
AC_PROG_MAKE_SET

dnl Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS(strings.h unistd.h sys/time.h)
#ifdef HAVE_STRINGS_H
AC_DEFINE(HAVE_WORKING___FUNC__)
#endif

dnl Checks for typedefs, structures, and compiler characteristics.
        
cat <<EOF

build information:
cc.............. $CC
libs............ $LIBS

EOF

AC_OUTPUT(Makefile)
